--- a/templates/blog/20200612091136.html
+++ b/templates/blog/20200612091136.html
@@ -1,39 +1,39 @@
-<div class="bread">
-  <ul itemscope itemtype="http://schema.org/BreadcrumbList">
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+<div class = "bread">
+  <ul itemscope itemtype = "http://schema.org/BreadcrumbList">
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/">
-        <span itemprop="name">Git</span>
+        <span itemprop = "name"> Git </ span>
       </a>
-      <meta itemprop="position" content="1" />
-    </li>
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+      <meta itemprop = "position" content = "1" />
+    </ li>
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/github.html">
-        <span itemprop="name">Githubとの連携</span>
+        <span itemprop = "name"> Cooperation with Github </ span>
       </a>
-      <meta itemprop="position" content="2" />
-    </li>
+      <meta itemprop = "position" content = "2" />
+    </ li>
     <li>
       here
-    </li>
-  </ul>
-</div>
+    </ li>
+  </ ul>
+</ div>
 
-<h2>Github Wikiのコンテンツの検索方法</h2>
+<h2> How to search the contents of Github Wiki </ h2>
 
-Github Wikiのコンテンツの検索方法です。
+How to search the contents of Github Wiki.
 
-<h3>リポジトリ内を検索</h3>
+<h3> Search in repository </ h3>
 
-右上の検索欄で検索をします。「In this repository」をクリックしてください。
+Search in the search field on the upper right. Click "In this repository".
 
-<img src="/images/github/github_wiki_search.png" style="width:100%">
+<img src = "/ images / github / github_wiki_search.png" style = "width: 100%">
 
-<h3>Wikiで絞り込み</h3>
+<h3> Filter by Wiki </ h3>
 
-Wikiページで絞り込みます。
+Narrow down on the Wiki page.
 
-<img src="/images/github/github_wiki_search_wiki.png" style="width:100%">
+<img src = "/ images / github / github_wiki_search_wiki.png" style = "width: 100%">
 
-検索結果が表示されます。
+The search results will be displayed.
 
-<img src="/images/github/github_wiki_search_result.png" style="width:100%">
+<img src = "/ images / github / github_wiki_search_result.png" style = "width: 100%">
