--- a/templates/blog/20201109142343.html
+++ b/templates/blog/20201109142343.html
@@ -1,54 +1,54 @@
-<div class="bread">
-  <ul itemscope itemtype="http://schema.org/BreadcrumbList">
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+<div class = "bread">
+  <ul itemscope itemtype = "http://schema.org/BreadcrumbList">
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/">
-        <span itemprop="name">Git</span>
+        <span itemprop = "name"> Git </ span>
       </a>
-      <meta itemprop="position" content="1" />
-    </li>
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+      <meta itemprop = "position" content = "1" />
+    </ li>
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/commands.html">
-        <span itemprop="name">コマンド</span>
+        <span itemprop = "name"> command </ span>
       </a>
-      <meta itemprop="position" content="2" />
-    </li>
+      <meta itemprop = "position" content = "2" />
+    </ li>
     <li>
       here
-    </li>
-  </ul>
-</div>
+    </ li>
+  </ ul>
+</ div>
 
-<h2>git init - Gitリポジトリの初期化</h2>
+<h2> git init --Initialize Git repository </ h2>
 
-Gitリポジトリを初期化するには「git init」コマンドを使用します。
+Use the "git init" command to initialize the Git repository.
 
 <pre>
 git init
-</pre>
+</ pre>
 
-perlzemiというディレクトリをGitリポジトリとして初期化するサンプルです。<a href="https://en.linux.perlzemi.com/blog/20191012191854.html">cdコマンド</a>で「perlzemi」ディレクトリに移動してから「git init」コマンドを実行します。
+This is a sample to initialize a directory called perlzemi as a Git repository. Use the <a href="https://en.linux.perlzemi.com/blog/20191012191854.html"> cd command </a> to change to the "perlzemi" directory and then run the "git init" command.
 
 <pre>
 cd perlzemi
 git init
-</pre>
+</ pre>
 
-初期化すると「.git」というディレクトリが作成されます。
+Initialization will create a directory called ".git".
 
 <pre>
 .git
-</pre>
+</ pre>
 
-「.git」ディレクトリの中には、このリポジトリに関するGitの設定や、Gitのコミット情報が保存されます。
+The ".git" directory stores Git settings for this repository and Git commit information.
 
-<h3>ワーキングディレクトリではない生のGitリポジトリを作成する</h3>
+<h3> Create a raw Git repository that is not a working directory </ h3>
 
-ワーキングディレクトリを持たない生のGitリポジトリを作成するには「git init」の「--bare」オプションを使用します。
+To create a raw Git repository without a working directory, use the "--bare" option of "git init".
 
-開発者として使う場合は、生のGitリポジトリ(.gitに該当するディレクトリだけ)を作成する必要はないと思いますが、Githubのようなリポジトリ管理Webインターフェースを開発する場合には、作業ディレクトリを持たないGitリポジトリを作成する場合があります。
+I don't think you need to create a raw Git repository (only the directory that corresponds to .git) if you use it as a developer, but if you develop a repository management web interface like Github, you have a working directory. You may create a Git repository that doesn't exist.
 
 <pre>
 mkdir foo.git
 cd foo.git
 git init --bare
-</pre>
+</ pre>
