--- a/templates/blog/20201110105057.html
+++ b/templates/blog/20201110105057.html
@@ -1,85 +1,85 @@
-<div class="bread">
-  <ul itemscope itemtype="http://schema.org/BreadcrumbList">
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+<div class = "bread">
+  <ul itemscope itemtype = "http://schema.org/BreadcrumbList">
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/">
-        <span itemprop="name">Git</span>
+        <span itemprop = "name"> Git </ span>
       </a>
-      <meta itemprop="position" content="1" />
-    </li>
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+      <meta itemprop = "position" content = "1" />
+    </ li>
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/commands.html">
-        <span itemprop="name">コマンド</span>
+        <span itemprop = "name"> command </ span>
       </a>
-      <meta itemprop="position" content="2" />
-    </li>
+      <meta itemprop = "position" content = "2" />
+    </ li>
     <li>
       here
-    </li>
-  </ul>
-</div>
+    </ li>
+  </ ul>
+</ div>
 
-<h2>git status - コミット準備されているかを確認する</h2>
+<h2> git status --Check if commit is ready </ h2>
 
-コミット準備されているかを確認するには「git status」コマンドを使用します。
+Use the "git status" command to see if it's ready to commit.
 
 <pre>
-# コミット準備されているかを確認
+#Check if commit is ready
 git status
-</pre>
+</ pre>
 
-<h4>コミット準備とは</h4>
+<h4> What is commit preparation? </ H4>
 
-Gitでは、いきなりコミットするのではなく、コミット準備という作業をコミットの前に行います。コミットするファイルを確定する作業のようなものだと考えてください。コミットは<a href="/blog/20201113141302.html">git commit</a>を使ってできますが、その前にコミット準備をします。公式には、インデックス、またはステージングと呼ばれますが、ここでは、解説のわかりやすさのために、コミット準備という言葉を使います。
+In Git, instead of committing suddenly, the task of preparing for commit is done before committing. Think of it as the task of deciding which files to commit. You can commit using <a href="/blog/20201113141302.html"> git commit </a>, but before that, prepare for the commit. Officially called indexing, or staging, we'll use the term commit preparation here for the sake of clarity.
 
-<h4>コミット準備がされていない場合</h4>
+<h4> If not ready to commit </ h4>
 
-コミット準備がされていない場合の「git status」コマンドの出力例です。
-
-<pre>
-# On branch master
-# Changes not staged for commit:
-#   (use "git add <file>..." to update what will be committed)
-#   (use "git checkout -- <file>..." to discard changes in working directory)
-#
-#       modified:   templates/blog/20201109142343.html
-#
-# Untracked files:
-#   (use "git add <file>..." to include in what will be committed)
-#
-#       a.txt
-#       templates/blog/20201110105057.html
-no changes added to commit (use "git add" and/or "git commit -a")
-</pre>
-
-新規に作成したファイルは、まだトラックされていませんと表示されています。
-
-修正がされたファイルは、まだコミットのための準備(ステージング)がされていませんと表示されます。
-
-<h4>コミット準備がされた場合</h4>
-
-コミット準備をするには「<a href="/blog/20201112094521.html">git add</a>」コマンドを使用します。「git add」を実行した後の状態を見てみましょう。
+Here is an example of the output of the "git status" command when it is not ready for commit.
 
 <pre>
-# コミット準備
-git add .
+#On branch master
+#Changes not staged for commit:
+# (use "git add <file> ..." to update what will be committed)
+# (use "git checkout-<file> ..." to discard changes in working directory)
+#
+#modified: templates / blog / 20201109142343.html
+#
+#Untracked files:
+# (use "git add <file> ..." to include in what will be committed)
+#
+# a.txt
+# templates / blog / 20201110105057.html
+no changes added to commit (use "git add" and / or "git commit -a")
+</ pre>
 
-# コミット準備がされているか確認
+The newly created file is shown as not yet tracked.
+
+The modified file will show that it has not yet been prepared (staging) for commit.
+
+<h4> When ready to commit </ h4>
+
+Use the "<a href="/blog/20201112094521.html"> git add </a>" command to prepare for commit. Let's take a look at the state after executing "git add".
+
+<pre>
+#Preparing to commit
+git add.
+
+#Check if you are ready to commit
 git status
-</pre>
+</ pre>
 
-「git status」の出力結果を見てみましょう。
+Let's see the output result of "git status".
 
 <pre>
-# On branch master
-# Changes to be committed:
-#   (use "git reset HEAD <file>..." to unstage)
+#On branch master
+#Changes to be committed:
+# (use "git reset HEAD <file> ..." to unstage)
 #
-#       new file:   a.txt
-#       modified:   templates/blog/20201109142343.html
-#       new file:   templates/blog/20201110105057.html
+# new file: a.txt
+#modified: templates / blog / 20201109142343.html
+# new file: templates / blog / 20201110105057.html
 #
-</pre>
+</ pre>
 
-変更のコミット準備ができましたと表示されます。
+You will see that your changes are ready to be committed.
 
-コミットするファイルの確認ができたら「git commit」コマンドで、コミットをしましょう。
+After confirming the file to commit, use the "git commit" command to commit.
