--- a/templates/blog/20210803133300.html
+++ b/templates/blog/20210803133300.html
@@ -1,88 +1,88 @@
-<div class="bread">
-  <ul itemscope itemtype="http://schema.org/BreadcrumbList">
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+<div class = "bread">
+  <ul itemscope itemtype = "http://schema.org/BreadcrumbList">
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/">
-        <span itemprop="name">Git</span>
+        <span itemprop = "name"> Git </ span>
       </a>
-      <meta itemprop="position" content="1" />
-    </li>
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+      <meta itemprop = "position" content = "1" />
+    </ li>
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/tutorial.html">
-        <span itemprop="name">入門</span>
+        <span itemprop = "name"> Introduction </ span>
       </a>
-      <meta itemprop="position" content="2" />
-    </li>
+      <meta itemprop = "position" content = "2" />
+    </ li>
     <li>
       here
-    </li>
-  </ul>
-</div>
+    </ li>
+  </ ul>
+</ div>
 
-<h2>リモートリポジトリにブランチをプッシュする</h2>
+<h2> Push a branch to a remote repository </ h2>
 
-リモートリポジトリにブランチをプッシュする方法を解説します。<a href="/blog/20210729082405.html">コミットが完了</a>していることを前提とします。
-<h3>リモートリポジトリとは</h3>
+Learn how to push a branch to a remote repository. It is assumed that <a href="/blog/20210729082405.html"> commit is complete </a>.
+<h3> What is a remote repository </ h3>
 
-リモートリポジトリとは、リモートにあるリポジトリのことです。たとえば、Github上にあるリポジトリが該当します。
+A remote repository is a remote repository. For example, a repository on Github.
 
-リモートリポジトリは、URLを使って表現できます。
+Remote repositories can be represented using URLs.
 
 <pre>
-# リモートリポジトリをURLで表現
+#Represent remote repository with URL
 git@github.com:yuki-kimoto/perlzemigit.git
-</pre>
+</ pre>
 
-ただしこれは、覚えておくことが面倒なので、名前を付けておくことが、ほとんどです。名前を付けるには「git remote add」コマンドを使用します。
+However, this is a hassle to remember, so most of the time you give it a name. Use the "git remote add" command to name it.
 
 <pre>
 git remote add origin git@github.com:yuki-kimoto/perlzemigit.git
-</pre>
+</ pre>
 
-デフォルトのリモートブランチは、originという名前を付けるのが慣例です。
+It is customary to name the default remote branch origin.
 
-<h3>ブランチとは</h3>
+<h3> What is a branch? </ H3>
 
-Gitのブランチについて解説します。Gitのブランチとは、コミットへの参照です。それぞれのコミットはコミットIDで表現されますが、そのコミットIDが伸びている先頭の部分に、名前を付けたものがブランチです。
+I will explain about the branch of Git. A Git branch is a reference to a commit. Each commit is represented by a commit ID, but the first part where the commit ID extends is the branch.
 
 <pre>
             main
-* - * - * - *
+*-*-*-*
   |
-  - * - *
+  -*-*
         add_api
-</pre>
+</ pre>
 
-Gitでは、デフォルトのブランチ名はmasterです。masterは、奴隷制度の主人をイメージするというユーザーのために、新しいバージョンのGitでは、デフォルトブランチ名を任意でつけることもできるようになっています。
+In Git, the default branch name is master. For users who imagine master as a slavery master, the new version of Git allows you to optionally give it a default branch name.
 
-<h3>ローカルリポジトリとリモートリポジトリ</h3>
+<h3> Local and remote repositories </ h3>
 
-Gitでは、ローカルリポジトリもリモートリポジトリも、ファイル全体の完全な情報を持つのでした。
+In Git, both local and remote repositories had complete information about the entire file.
 
-プッシュとはなんでしょうか? プッシュとは、以下の二つを行うことだと考えてください。
+What is a push? Think of a push as doing two things:
 
-1. ローカルリポジトリの情報をリモートリポジトリに転送する
-2. ブランチの先頭を合わせる
+1. Transfer information from the local repository to the remote repository
+2. Align the beginning of the branch
 
-ローカルリポジトリが次の状態だとします。
+Suppose your local repository is in the following state:
 
 <pre>
             main
-* - * - * - * 
-</pre>
+*-*-*-*
+</ pre>
 
-リモートリポジトリ「origin」が次のような状態だとします。
+Suppose the remote repository "origin" is in the following state.
 
 <pre>
         main
-* - * - *
-</pre>
+*-*-*
+</ pre>
 
-プッシュとは、つまり、ローカルリポジトリの新しいコミットを、リモートリポジトリに転送し、ブランチの位置を合わせることです。
+Pushing means transferring a new commit from your local repository to a remote repository and aligning your branches.
 
-<h3>プッシュする</h3>
+<h3> Push </ h3>
 
-プッシュするには「<a href="/blog/20210812084715.html">git push</a>」コマンドを使用します。引数は、リモートリポジトリ名、ブランチ名です。
+Use the "<a href="/blog/20210812084715.html"> git push </a>" command to push. The arguments are the remote repository name and branch name.
 
 <pre>
 git push origin main
-</pre>
+</ pre>
