--- a/templates/blog/20210809142256.html
+++ b/templates/blog/20210809142256.html
@@ -1,79 +1,79 @@
-<div class="bread">
-  <ul itemscope itemtype="http://schema.org/BreadcrumbList">
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+<div class = "bread">
+  <ul itemscope itemtype = "http://schema.org/BreadcrumbList">
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/">
-        <span itemprop="name">Git</span>
+        <span itemprop = "name"> Git </ span>
       </a>
-      <meta itemprop="position" content="1" />
-    </li>
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+      <meta itemprop = "position" content = "1" />
+    </ li>
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/commands.html">
-        <span itemprop="name">コマンド</span>
+        <span itemprop = "name"> command </ span>
       </a>
-      <meta itemprop="position" content="2" />
-    </li>
+      <meta itemprop = "position" content = "2" />
+    </ li>
     <li>
       here
-    </li>
-  </ul>
-</div>
+    </ li>
+  </ ul>
+</ div>
 
-<h2>git fetch - リモートリポジトリの情報取得</h2>
+<h2> git fetch --remote repository information fetch </ h2>
 
-git fetchコマンドを使用するとリモートリポジトリの情報を取得することができます。感覚的には、リモートリポジトリを、ローカルリポジトリへ同期すると考えてください。
+You can use the git fetch command to fetch information about remote repositories. Think of it as synchronizing a remote repository to a local repository.
 
 <pre>
-# リモートリポジトリの情報を取得
+#Get remote repository information
 git fetch
-</pre>
+</ pre>
 
-<h3>git fetchを使うのはどのようなときですか?</h3>
+<h3> When do you use git fetch? </ h3>
 
-「<a href="/blog/20210813082314.html">git pull</a>」コマンドを使うと「git fetch」を行うことに加えて、現在のブランチに指定したリモートリポジトリのブランチの変更内容をマージしてくれます。
+Using the "<a href="/blog/20210813082314.html"> git pull </a>" command will do a "git fetch" as well as any changes to the remote repository branch specified for the current branch. It will merge.
 
-ですので「git pull」よりも「git fetch」を使いたい場合は、現在のブランチにリモートブランチの変更内容をマージしたくない場合です。
+So if you want to use "git fetch" rather than "git pull", you don't want to merge the changes in the remote branch into the current branch.
 
-他の開発者が作ったリモートにあるブランチを元に、ローカルのブランチを作ったり、手動でリモートリポジトリのブランチをマージしたいときなどがあります。
+For example, you may want to create a local branch based on a remote branch created by another developer, or manually merge a branch in a remote repository.
 
-また、安全のために「git pull」をまったく使わずに「git fetch」とマージ作業を分けて行うという開発者の方もおられます。
+Also, for security reasons, some developers do not use "git pull" at all and do the merge work separately from "git fetch".
 
-<h3>git fetchで知っておいた方が良いことを教えてください</h3>
+<h3> Please tell me what you should know with git fetch </ h3>
 
-タグは、同期されます。
+The tags will be synced.
 
-リモートブランチとローカルブランチを区別してください。git fetchをすると、リモートブランチを、ローカルリポジトリの中に取り込みますが、リモートブランチとローカルブランチは異なるものです。
+Distinguish between remote and local branches. When you do a git fetch, you fetch the remote branch into your local repository, but the remote branch and the local branch are different.
 
-リモートブランチは「origin/foo」のように先頭に「origin」がついています。
+Remote branches have "origin" at the beginning, like "origin / foo".
 
-<a href="/blog/20201220091244.html">git branch</a>コマンドで、ローカルブランチ表示してみましょう。
+Let's display the local branch with the <a href="/blog/20201220091244.html"> git branch </a> command.
 
 <pre>
-# ローカルブランチの表示
+#View local branch
 git branch
-</pre>
+</ pre>
 
-ローカルブランチの出力結果の例です。
+Here is an example of the output of a local branch.
 
 <pre>
 main
 foo
-bar
-</pre>
+bar bar
+</ pre>
 
-git branchコマンドの「-r」オプションで、リモートブランチを表示してみましょう。
+Let's display the remote branch with the "-r" option of the git branch command.
 
 <pre>
-# リモートブランチの表示
+#View remote branches
 git branch -r
-</pre>
+</ pre>
 
-リモートブランチの出力結果の例です。
+Here is an example of the output result of a remote branch.
 
 <pre>
-origin/foo
-origin/baz
-</pre>
+origin / foo
+origin / baz
+</ pre>
 
-ややこしいのは、リモートブランチとは、リモートリポジトリにあるブランチのことではなくって、ローカルリポジトリの中にある、リモートリポジトリにあるブランチのコミットを指し示すブランチだということです。
+The tricky part is that a remote branch isn't a branch in a remote repository, but a branch in a local repository that points to a commit in a branch in a remote repository.
 
-ややこしいですが「origin/foo」「origin/baz」は「git fetch」により、ローカルリポジトリに取り込まれたと、考えてください。
+It's confusing, but think of "origin / foo" and "origin / baz" as being fetched into your local repository by "git fetch".
