--- a/templates/github.html
+++ b/templates/github.html
@@ -1,40 +1,40 @@
-<div class="bread">
-  <ul itemscope itemtype="http://schema.org/BreadcrumbList">
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+<div class = "bread">
+  <ul itemscope itemtype = "http://schema.org/BreadcrumbList">
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/">
-        <span itemprop="name">Git</span>
+        <span itemprop = "name"> Git </ span>
       </a>
-      <meta itemprop="position" content="1" />
-    </li>
+      <meta itemprop = "position" content = "1" />
+    </ li>
     <li>
       here
-    </li>
-  </ul>
-</div>
+    </ li>
+  </ ul>
+</ div>
 
-<h2>Githubとの連携</h2>
+<h2> Cooperation with Github </ h2>
 
-GitとGithubとの連携方法の解説します。
+I will explain how to link Git and Github.
 
-<h4>Gitリポジトリ管理 - システム開発のソースコード管理</h4>
-
-<ul>
-  <li><a href="/blog/20200615091136.html">Githubへのアカウント登録</a></li>
-  <li><a href="/blog/20200614091136.html">GithubでのGitリポジトリの作成</a></li>
-  <li><a href="/blog/20200613091136.html">Githubに公開鍵を登録する</a></li>
-</ul>
-
-<h4>Github Wikiを使った手順書管理</h4>
-
-Github Wikiを使った手順書管理について解説します。
-
-プライベートリポジトリにおけるWikiの利用は現在、有料コースのみとなっています。
-
-手順書を無料で運用したい場合は、Githubリポジトリの各ページのREADME.mdをうまく活用しましょう。
+<h4> Git repository management-source code control for system development </ h4>
 
 <ul>
-  <li><a href="/blog/20200618094326.html">GithubのWikiの新規作成</a></li>
-  <li><a href="/blog/20200617094326.html">GithubのWikiの編集</a></li>
-  <li><a href="/blog/20200616094326.html">Github Wikiのコンテンツのバックアップ方法</a></li>
-  <li><a href="/blog/20200612091136.html">Github Wikiのコンテンツの検索方法</a></li>
-</ul>
+  <li> <a href="/blog/20200615091136.html"> Register an account on Github </a> </ li>
+  <li> <a href="/blog/20200614091136.html"> Creating a Git repository on Github </a> </ li>
+  <li> <a href="/blog/20200613091136.html"> Register the public key on Github </a> </ li>
+</ ul>
+
+<h4> Runbook management using Github Wiki </ h4>
+
+I will explain the procedure manual management using Github Wiki.
+
+The use of Wiki in private repositories is currently only for paid courses.
+
+If you want to operate the runbook for free, make good use of README.md on each page of the Github repository.
+
+<ul>
+  <li> <a href="/blog/20200618094326.html"> Create a new Wiki on Github </a> </ li>
+  <li> <a href="/blog/20200617094326.html"> Editing the Github Wiki </a> </ li>
+  <li> <a href="/blog/20200616094326.html"> How to back up the contents of Github Wiki </a> </ li>
+  <li> <a href="/blog/20200612091136.html"> How to search the contents of Github Wiki </a> </ li>
+</ ul>
