--- a/templates/blog/20200614091136.html
+++ b/templates/blog/20200614091136.html
@@ -1,70 +1,70 @@
-<div class="bread">
-  <ul itemscope itemtype="http://schema.org/BreadcrumbList">
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+<div class = "bread">
+  <ul itemscope itemtype = "http://schema.org/BreadcrumbList">
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/">
-        <span itemprop="name">Git</span>
+        <span itemprop = "name"> Git </ span>
       </a>
-      <meta itemprop="position" content="1" />
-    </li>
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+      <meta itemprop = "position" content = "1" />
+    </ li>
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/github.html">
-        <span itemprop="name">Githubとの連携</span>
+        <span itemprop = "name"> Cooperation with Github </ span>
       </a>
-      <meta itemprop="position" content="2" />
-    </li>
+      <meta itemprop = "position" content = "2" />
+    </ li>
     <li>
       here
-    </li>
-  </ul>
-</div>
+    </ li>
+  </ ul>
+</ div>
 
-<h2>GithubでのGitリポジトリの作成</h2>
+<h2> Creating a Git repository on Github </ h2>
 
-次に、Gitリポジトリを作成します。Githubにサインインしていない場合は、サインインしてください。
+Next, create a Git repository. If you're not signed in to Github, sign in.
 
-<h4>Gitリポジトリの作成画面へ移動</h4>
+<h4> Move to the Git repository creation screen </ h4>
 
-Gitリポジトリの作成画面への移動は、右上の「+」の「New repository」から行います。
+To move to the Git repository creation screen, click "New repository" of "+" on the upper right.
 
-<a href="https://github.com/join"><img src="/images/github/github_create_repo.png" style="width:100%"></a>
+<a href="https://github.com/join"> <img src = "/ images / github / github_create_repo.png" style = "width: 100%"> </a>
 
-<h4>Gitリポジトリの作成</h4>
+<h4> Create a Git repository </ h4>
 
-プロジェクト名を入力して「Create repository」のボタンを押します。
+Enter the project name and press the "Create repository" button.
 
-プロジェクトを他のユーザーから見れないようにプライベートにする場合は「Private」をチェックしてください。
+Check "Private" if you want to keep your project private so that no one else can see it.
 
-<a href="https://github.com/join"><img src="/images/github/github_create_repo_project.png" style="width:100%"></a>
+<a href="https://github.com/join"> <img src = "/ images / github / github_create_repo_project.png" style = "width: 100%"> </a>
 
-成功すると以下の画面が表示されます。
+If successful, the following screen will be displayed.
 
-<a href="https://github.com/join"><img src="/images/github/github_create_repo_success.png" style="width:100%"></a>
+<a href="https://github.com/join"> <img src = "/ images / github / github_create_repo_success.png" style = "width: 100%"> </a>
 
-これで、Github上でのGitリポジトリは完成です。
+This completes the Git repository on Github.
 
-<h3>公開鍵の登録</h3>
+<h3> Public key registration </ h3>
 
-次に必要な手順は、公開鍵を登録する作業です。GithubへのリポジトリをSSHプロトコル上で、反映させるためには、公開鍵認証を行う必要があります。
+The next step you need to do is register your public key. In order to reflect the repository to Github on the SSH protocol, it is necessary to perform public key authentication.
 
-HTTPSでも、リポジトリをpush/pullを行うこともできますが、pushのたびにパスワードを聞かれるので、開発を行う場合は、公開鍵を登録して、SSLプロトコルを使うのがお勧めです。
+You can also push / pull the repository with HTTPS, but you will be asked for the password every time you push, so it is recommended to register the public key and use the SSL protocol when developing.
 
 <ul>
-  <li><a href="/blog/20200613091136.html">Githubに公開鍵を登録する</a></li>
-</ul>
+  <li> <a href="/blog/20200613091136.html"> Register the public key on Github </a> </ li>
+</ ul>
 
-<h3>ローカルの既存のGithubレポジトリをGithub上のリポジトリに反映する</h3>
+<h3> Reflect the existing local Github repository in the repository on Github </ h3>
 
-ローカルの既存のGithubレポジトリをGithub上のリポジトリに反映するには、リポジトリの作成成功画面に記載されている、以下のコマンドを実行します。
+To reflect the existing local Github repository to the repository on Github, execute the following command described in the repository creation success screen.
 
-URLのタブはSSHをクリックしましょう。
+Click SSH for the URL tab.
 
 <pre>
 git remote add origin git@github.com:shinshina-kimoto/fudousan_app.git
 git push -u origin master
-</pre>
+</ pre>
 
-ローカルにおけるGitレポジトリの作成については、以下を参考にしてください。
+For information on creating a local Git repository, please refer to the following.
 
 <ul>
-  <li><a href="/blog/20200605092020.html">git init - Gitリポジトリの初期化</a></li>
-</ul>
+  <li> <a href="/blog/20200605092020.html"> git init --Initialize Git repository </a> </ li>
+</ ul>
