--- a/templates/blog/20200615091136.html
+++ b/templates/blog/20200615091136.html
@@ -1,51 +1,51 @@
-<div class="bread">
-  <ul itemscope itemtype="http://schema.org/BreadcrumbList">
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+<div class = "bread">
+  <ul itemscope itemtype = "http://schema.org/BreadcrumbList">
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/">
-        <span itemprop="name">Git</span>
+        <span itemprop = "name"> Git </ span>
       </a>
-      <meta itemprop="position" content="1" />
-    </li>
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+      <meta itemprop = "position" content = "1" />
+    </ li>
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/github.html">
-        <span itemprop="name">Githubとの連携</span>
+        <span itemprop = "name"> Cooperation with Github </ span>
       </a>
-      <meta itemprop="position" content="2" />
-    </li>
+      <meta itemprop = "position" content = "2" />
+    </ li>
     <li>
       here
-    </li>
-  </ul>
-</div>
+    </ li>
+  </ ul>
+</ div>
 
-<h2>Githubへのアカウント登録</h2>
+<h2> Register an account on Github </ h2>
 
-Githubへのアカウント登録の方法を解説します。
+I will explain how to register an account on Github.
 
-<h3>Githubとは</h3>
+<h3> What is Github </ h3>
 
-Githubは、Gitリポリトリを管理できる無料のWebサービスです。第三者に公開したくないファイルをプライベートで管理することもできます。
+Github is a free web service that allows you to manage your Git repolitri. You can also privately manage files that you do not want to expose to third parties.
 
-無料プランの場合でも、プライベートリポジトリーの作成や、コラボレーターと呼ばれる共同開発者の追加を無制限で行うことができます。
+Even with the free plan, you can create private repositories and add unlimited collaborative developers.
 
-月額21ドル(2019年1月8日の情報)のエンタープライズプランに申し込めば、<a href="https://help.github.com/ja/github/setting-up-and-managing-your-enterprise-account/enforcing-security-settings-in-your-enterprise-account#managing-allowed-ip-addresses-for-organizations-in-your-enterprise-account">IPアドレス制限</a>を行うことが可能です。Web上での操作で、誤って、リポジトリを公開状態にしてしまって機密情報が洩れるというミスを防ぐことが可能です。
+If you sign up for an enterprise plan for $ 21 / month (January 8, 2019 information), <a href="https://help.github.com/ja/github/setting-up-and-managing-your-enterprise" -account / enforcing-security-settings-in-your-enterprise-account # managing-allowed-ip-addresses-for-organizations-in-your-enterprise-account "> IP address restrictions </a> possible am. It is possible to prevent mistakes such as accidentally making the repository public and leaking confidential information by operating on the Web.
 
-Githubの機能は、ソースコードの管理が中心ですが、バグを追いかけるためのIssueと呼ばれる掲示板機能があるので、バグ修正・製品改善のための情報を共有することが可能です。
+The function of Github is mainly source code management, but since there is a bulletin board function called Issue for chasing bugs, it is possible to share information for bug fixes and product improvements.
 
-またWikiの機能が、プロジェクトごとに存在し、マークダウンという記法で、ドキュメントを共有することも可能です。WikiとIssueを使うだけであれば、Gitの知識を必要としないので、Gitの知識がない方でも、試してみるという価値はあります。
+There is also a Wiki feature for each project, and it is possible to share documents using the notation of markdown. If you just use Wiki and Issue, you don't need to know Git, so even if you don't have Git knowledge, it's worth a try.
 
-<h3>Githubへのアカウント登録</h3>
+<h3> Register an account on Github </ h3>
 
-まずGithubへの<a href="https://github.com/join">アカウント登録</a>をします。
+First, <a href="https://github.com/join"> account registration </a> to Github.
 
-<a href="https://github.com/join"><img src="/images/github/github_create_acount.png" style="width:100%"></a>
+<a href="https://github.com/join"> <img src = "/ images / github / github_create_acount.png" style = "width: 100%"> </a>
 
-アカウント登録するとメールが送信されてきますので、Verify email addressのリンクをクリックして、登録を完了します。
+When you register for an account, you will receive an email. Click the Verify email address link to complete the registration.
 
-サインイン画面が現れたときは、登録したユーザー名とパスワードでサインインしてください。
+When the sign-in screen appears, sign in with your registered user name and password.
 
-ユーザー認証が完了します。
+User authentication is complete.
 
-<h3>Gitリポジトリの作成</h3>
+<h3> Create a Git repository </ h3>
 
-Githubにおける、Gitリポジトリの作成については、以下の記事を参考にしてください。
+Please refer to the following articles for creating a Git repository on Github.
