--- a/templates/blog/20200616094326.html
+++ b/templates/blog/20200616094326.html
@@ -1,35 +1,35 @@
-<div class="bread">
-  <ul itemscope itemtype="http://schema.org/BreadcrumbList">
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+<div class = "bread">
+  <ul itemscope itemtype = "http://schema.org/BreadcrumbList">
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/">
-        <span itemprop="name">Git</span>
+        <span itemprop = "name"> Git </ span>
       </a>
-      <meta itemprop="position" content="1" />
-    </li>
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+      <meta itemprop = "position" content = "1" />
+    </ li>
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/github.html">
-        <span itemprop="name">Githubとの連携</span>
+        <span itemprop = "name"> Cooperation with Github </ span>
       </a>
-      <meta itemprop="position" content="2" />
-    </li>
+      <meta itemprop = "position" content = "2" />
+    </ li>
     <li>
       here
-    </li>
-  </ul>
-</div>
+    </ li>
+  </ ul>
+</ div>
 
-<h2>Github Wikiのコンテンツのバックアップ方法</h2>
+<h2> How to back up the contents of Github Wiki </ h2>
 
-Github WikiはGitで管理されているので、WikiのGitリポジトリを「git clone」するだけです。ページ全体をバックアップできます。
+The Github Wiki is managed by Git, so all you have to do is "git clone" the Wiki's Git repository. You can back up the entire page.
 
-<img src="/images/github/github_wiki_backup.png" style="width:100%">
+<img src = "/ images / github / github_wiki_backup.png" style = "width: 100%">
 
 <pre>
 git clone https://github.com/yuki-kimoto/perlzemiubuntu.wiki.git
-</pre>
+</ pre>
 
-<h3>ローカルで編集してpushする</h3>
+<h3> Edit and push locally </ h3>
 
-GithubのWikiは単なるGitリポジトリなので、ローカルで編集して「git push」するということも可能です。
+The Github Wiki is just a Git repository, so you can edit it locally and "git push" it.
 
-全体的に修正したい内容がある場合に、便利です。
+This is useful when you have content that you want to modify as a whole.
