--- a/templates/blog/20200618094326.html
+++ b/templates/blog/20200618094326.html
@@ -1,87 +1,87 @@
-<div class="bread">
-  <ul itemscope itemtype="http://schema.org/BreadcrumbList">
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+<div class = "bread">
+  <ul itemscope itemtype = "http://schema.org/BreadcrumbList">
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/">
-        <span itemprop="name">Git</span>
+        <span itemprop = "name"> Git </ span>
       </a>
-      <meta itemprop="position" content="1" />
-    </li>
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+      <meta itemprop = "position" content = "1" />
+    </ li>
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/github.html">
-        <span itemprop="name">Githubとの連携</span>
+        <span itemprop = "name"> Cooperation with Github </ span>
       </a>
-      <meta itemprop="position" content="2" />
-    </li>
+      <meta itemprop = "position" content = "2" />
+    </ li>
     <li>
       here
-    </li>
-  </ul>
-</div>
+    </ li>
+  </ ul>
+</ div>
 
-<h2>GithubのWikiの新規作成</h2>
+<h2> Create a new Wiki on Github </ h2>
 
-GithubでのWikiの使い方を解説します。GithubのWikiはマークダウンという記法で記述でき、プロダクトのドキュメントを共同編集に利用できます。
+I will explain how to use the Wiki on Github. The Github Wiki can be written in Markdown notation, and the product documentation can be used for co-editing.
 
-GithubのWikiは、Gitを使っているので、履歴管理は、自動で行ってくれ、いざというときは、古い手順を取り出すことも可能なので、安心。
+Since Github's Wiki uses Git, history management is done automatically, and in case of emergency, it is possible to retrieve old procedures, so you can rest assured.
 
-<h3>Wikiのページへ移動</h3>
+<h3> Go to Wiki page </ h3>
 
-プロジェクトのページのWikiボタンを押して、Wikiのページに移動します。
+Press the Wiki button on the project page to go to the Wiki page.
 
-<img src="/images/github/github_wiki_button.png" style="width:100%">
+<img src = "/ images / github / github_wiki_button.png" style = "width: 100%">
 
-<h3>Wikiの新規作成</h3>
+<h3> Create a new Wiki </ h3>
 
-「Create the first page」をクリックして、Wikiを新規作成します。
+Click Create the first page to create a new wiki.
 
-<img src="/images/github/github_wiki_new_page_button.png" style="width:100%">
+<img src = "/ images / github / github_wiki_new_page_button.png" style = "width: 100%">
 
-<h3>Wikiの編集画面</h3>
+<h3> Wiki edit screen </ h3>
 
-最初のページを作成する画面が立ち上がります。これは、Wikiの新規作成ページです。
+The screen for creating the first page will be launched. This is a new page on the Wiki.
 
-<img src="/images/github/github_wiki_edit.png" style="width:100%">
+<img src = "/ images / github / github_wiki_edit.png" style = "width: 100%">
 
-一番上は、タイトルです。トップぺージの場合は「Home」です。そのままにしておきます。
+At the top is the title. For the top page, it is "Home". Leave it as it is.
 
-次は、本文を記載します。マークダウンという記法で書けますが、まずは、「こんにちは」と書いてみましょう。
+Next, I will describe the text. You can write it in Markdown, but first, let's write "Hello".
 
-下の「Edit message」は、編集内容の要約を記述します。そのままでも良いですし、空白の場合は、自動で入力されます。
+The "Edit message" below describes a summary of what you have edited. You can leave it as it is, or if it is blank, it will be entered automatically.
 
-右下の「Save Page」で保存しましょう。
+Let's save it with "Save Page" at the bottom right.
 
-<h3>Wikiの最初のページが完成</h3>
+<h3> The first page of the Wiki is complete </ h3>
 
-ページが作成されました。
+The page has been created.
 
-<img src="/images/github/github_wiki_new_complete.png" style="width:100%">
+<img src = "/ images / github / github_wiki_new_complete.png" style = "width: 100%">
 
-<h3>記事の編集に進む</h3>
+<h3> Proceed to edit the article </ h3>
 
-記事を編集する場合は、Github Wikiの記事の編集に進んでみましょう。
+If you want to edit the article, go to Edit Article on the Github Wiki.
 
 <ul>
-  <li><a href="/blog/20200617094326.html">GithubのWikiの編集</a></li>
-</ul>
+  <li> <a href="/blog/20200617094326.html"> Editing the Github Wiki </a> </ li>
+</ ul>
 
-<h3>他のページを新規作成する</h3>
+<h3> Create another page </ h3>
 
-他のページを新規作成したい場合は、右上の「New Page」をクリックします。
+If you want to create another page, click "New Page" in the upper right.
 
-Titleの部分が空になっているので、タイトルを入力してください。空白を入れるのはやめまておきましょう。
+The Title part is empty, so enter the title. Don't put in blanks.
 
 <pre>
 BuildDevelopmentServer
-</pre>
+</ pre>
 
-日本語でも入力が可能ですが、Wikiの場合は、これが、ページを識別するものになるので、ご注意ください。
+You can also enter in Japanese, but please note that in the case of Wiki, this will identify the page.
 
 <pre>
-開発サーバー構築
-</pre>
+Development server construction
+</ pre>
 
-少し面倒ですが、日付・時刻のような形式にしておくと、内容を書き換える場合でも、大丈夫です。
+It's a little troublesome, but if you use a format like date / time, even if you rewrite the contents, it's okay.
 
 <pre>
 20200618102500
-</pre>
+</ pre>
