--- a/templates/blog/20201221091244.html
+++ b/templates/blog/20201221091244.html
@@ -1,90 +1,90 @@
-<div class="bread">
-  <ul itemscope itemtype="http://schema.org/BreadcrumbList">
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+<div class = "bread">
+  <ul itemscope itemtype = "http://schema.org/BreadcrumbList">
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/">
-        <span itemprop="name">Git</span>
+        <span itemprop = "name"> Git </ span>
       </a>
-      <meta itemprop="position" content="1" />
-    </li>
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+      <meta itemprop = "position" content = "1" />
+    </ li>
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/tutorial.html">
-        <span itemprop="name">入門</span>
+        <span itemprop = "name"> Introduction </ span>
       </a>
-      <meta itemprop="position" content="2" />
-    </li>
+      <meta itemprop = "position" content = "2" />
+    </ li>
     <li>
       here
-    </li>
-  </ul>
-</div>
+    </ li>
+  </ ul>
+</ div>
 
-<h2>Gitで削除したファイルを復元する簡単な方法</h3>
+<h2> Easy way to restore deleted files with Git </ h3>
 
-「あのファイル過去に削除しちゃったけど、実は必要だった」「あの消しちゃったプログラムを改造して、新しいプログラムを作りたい」。Gitで削除したファイルを復元する簡単な方法のご紹介です。
+"I deleted that file in the past, but I actually needed it." "I want to modify that deleted program to create a new program." Here's an easy way to recover deleted files in Git.
 
-Gitはすべてのファイルとディレクトリの変更履歴を持っています。ですので、必要なことは、過去の状態に戻す方法と、ファイルを削除したコミットのひとつ前のコミットを知ることです。
+Git has a history of changes to all files and directories. So all you need to do is know how to revert to the past state and the commit immediately before the one that deleted the file.
 
-<h3>ファイルを削除したコミットのひとつ前のコミットIDを見つける</h3>
+<h3> Find the commit ID immediately before the commit that deleted the file </ h3>
 
-<a href="/blog/20201103093112.html">git log</a>コマンドで、過去のコミットを見ることができます。
+You can see past commits with the <a href="/blog/20201103093112.html"> git log </a> command.
 
 <pre>
 git log
-</pre>
+</ pre>
 
 <pre>
 commit 23cd914d4f7087a01a1d23c66edc98026013102d
 Author: Kimoto Yuki <kimoto.yuki@google.com>
-Date:   Wed Nov 25 10:20:34 2020 +0900
+Date: Wed Nov 25 10:20:34 2020 +0900
 
-    不要な○○ファイルを削除
+    Delete unnecessary XX files
 
 commit a15a73d62711fd9a5469ae7791241a4fd8978537
 Author: Kimoto Yuki <kimoto.yuki@google.com>
-Date:   Wed Nov 25 10:20:34 2020 +0900
+Date: Wed Nov 25 10:20:34 2020 +0900
 
-    ヘッダーを修正
-</pre>
+    Fix header
+</ pre>
 
-ファイル消す前のコミットID「a15a73d...」がすぐに見つかればそれでOKです。
+If you can find the commit ID "a15a73d ..." before deleting the file immediately, that's OK.
 
-消したのが、だいぶ前だった場合、コミットメッセージをたどるのは大変です。そのような場合は、コミットメッセージを検索しましょう。コミットメッセージは、思い出す必要がありますよ。
+If you erased it a long time ago, it's hard to follow the commit message. In that case, search for the commit message. The commit message needs to be remembered.
 
 <pre>
-git log --grep 削除
-</pre>
+git log --grep remove
+</ pre>
 
-コミットメッセージに「〇〇を削除」みたいなのを入れておいた場合は、これで検索できます。
+If you put something like "Delete XX" in the commit message, you can search with this.
 
-このコミットのコミットIDを取得しましょう。
+Let's get the commit ID of this commit.
 
 <pre>
 commit 23cd914d4f7087a01a1d23c66edc98026013102d
 Author: Kimoto Yuki <kimoto.yuki@google.com>
-Date:   Wed Nov 25 10:20:34 2020 +0900
+Date: Wed Nov 25 10:20:34 2020 +0900
 
-    不要な○○ファイルを削除
-</pre>
+    Delete unnecessary XX files
+</ pre>
 
-Gitでは、一つ前のコミットIDというのを「コミットID^」で表現できます。
-
-<pre>
-# 一つ前のコミットのコミットID
-23cd914d4f7087a01a1d23c66edc98026013102d^
-</pre>
-
-<h3>ブランチを作成してチェックアウト</h3>
-
-上記のコミットIDから<a href="/blog/20201220091244.html">git branch</a>で新しいブランチを作りましょう。ここでは名前は「old」とします。
+In Git, the previous commit ID can be expressed by "commit ID ^".
 
 <pre>
-git branch old 23cd914d4f7087a01a1d23c66edc98026013102d^
-</pre>
+# Commit ID of the previous commit
+23cd914d4f7087a01a1d23c66edc98026013102d ^
+</ pre>
 
-git checkoutして、ブランチを切り替えます。
+<h3> Create a branch and check out </ h3>
+
+Let's create a new branch with <a href="/blog/20201220091244.html"> git branch </a> from the above commit ID. Here, the name is "old".
+
+<pre>
+git branch old 23cd914d4f7087a01a1d23c66edc98026013102d ^
+</ pre>
+
+Do a git checkout to switch branches.
 
 <pre>
 git checkout old
-</pre>
+</ pre>
 
-古いファイルがあるかを見つけて、どこかにコピーしましょう。そして、元のブランチに戻ります。
+Find out if there is an old file and copy it somewhere. Then go back to the original branch.
