--- a/templates/blog/20210719151607.html
+++ b/templates/blog/20210719151607.html
@@ -1,59 +1,59 @@
-<div class="bread">
-  <ul itemscope itemtype="http://schema.org/BreadcrumbList">
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+<div class = "bread">
+  <ul itemscope itemtype = "http://schema.org/BreadcrumbList">
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/">
-        <span itemprop="name">Git</span>
+        <span itemprop = "name"> Git </ span>
       </a>
-      <meta itemprop="position" content="1" />
-    </li>
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+      <meta itemprop = "position" content = "1" />
+    </ li>
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/tutorial.html">
-        <span itemprop="name">入門</span>
+        <span itemprop = "name"> Introduction </ span>
       </a>
-      <meta itemprop="position" content="2" />
-    </li>
+      <meta itemprop = "position" content = "2" />
+    </ li>
     <li>
       here
-    </li>
-  </ul>
-</div>
+    </ li>
+  </ ul>
+</ div>
 
-<h2>Gitとは</h2>
+<h2> What is Git? </ H2>
 
-Gitは、ソースコードのバージョン管理システムです。分散バージョン管理システムで、リモートリポジトリ、ローカルリポジトリともに、完全なリポジトリ情報を持つことが特徴です。
+Git is a source code version control system. It is a distributed version control system and is characterized by having complete repository information for both remote and local repositories.
 
-<h3>Gitの歴史</h3>
+<h3> History of Git </ h3>
 
-Gitは<a href="https://en.linux.perlzemi.com/">Linux</a>の創始者のリーナス・トーバルズ氏によって、Linuxの大量のソースコードを速く・効率的に管理するために作成されたバージョン管理システムです。Gitは、主に<a href="https://en.c.perlzemi.com/">C言語</a>で書かれ、部分的に<a href="https://perlzemi.com/">Perl</a>で書かれています。
+Git manages a large amount of Linux source code quickly and efficiently by Linus Torvalds, the founder of <a href="https://en.linux.perlzemi.com/"> Linux </a>. A version control system created for Linux. Git is written primarily in <a href="https://en.c.perlzemi.com/"> C language </a> and partially <a href="https://perlzemi.com/". Written in "> Perl </a>.
 
-<h3>Gitの特徴</h3>
+<h3> Features of Git </ h3>
 
-Gitの特徴です。
+It is a feature of Git.
 
-<h4>分散リポジトリ管理システム</h4>
+<h4> Distributed repository management system </ h4>
 
-Gitは分散リポジトリ管理システムで、リモートリポジトリとローカルリポジトリがともに、完全なリポジトリ情報を持ちます。実際のGitを使ったファイル管理では、ローカルリポジトリにファイルをコミット、差分をリモートリポジトリに送信(push)という作業を行います。
+Git is a distributed repository management system where both remote and local repositories have complete repository information. In actual file management using Git, the work of committing the file to the local repository and pushing the difference to the remote repository is performed.
 
-<h4>大量のソースコードでも速い</h4>
+<h4> Fast even with a large amount of source code </ h4>
 
-Gitは大量のソースコードでも速いです。
+Git is fast even with a large amount of source code.
 
-<h4>ブランチ作成が速い</h4>
+<h4> Branching is fast </ h4>
 
-Gitは、ブランチの作成が速いです。
+Git is quick to create branches.
 
-<h4>Gitはファイルの喪失に強い</h4>
+<h4> Git is resistant to file loss </ h4>
 
-Gitは分散リポジトリ管理システムなので、ファイルの情報の喪失に強いです。ひとつのリポジトリがファイル破損をしたとしても、他のリポジトリでファイル破損がなければ、完全に復旧できます。
+Since Git is a distributed repository management system, it is resistant to loss of file information. Even if one repository has file corruption, it can be completely recovered if there is no file corruption in the other repository.
 
-<h4>GithubというWebインタフェースがある</h4>
+<h4> There is a web interface called Github </ h4>
 
-現在Microsoftが提供しているGithubというGitのためのWebインターフェースが無料で利用できます。
+A web interface for Git called Github currently provided by Microsoft is available for free.
 
-<h4>アプリケーションのデプロイが簡単</h4>
+<h4> Easy application deployment </ h4>
 
-アプリケーションがテキストファイルで構成されていれば、アプリケーションのデプロイは、コマンドを一つ実行するだけで、完了します。
+If your application consists of text files, deploying your application is complete with just one command.
 
-<h4>任意の過去の状態にいつでも戻せる</h4>
+<h4> You can always return to any past state </ h4>
 
-ファイルを任意の過去の状態にいつでも戻すことができます。
+You can revert the file to any past state at any time.
