--- a/templates/blog/20210720092930.html
+++ b/templates/blog/20210720092930.html
@@ -1,65 +1,65 @@
-<div class="bread">
-  <ul itemscope itemtype="http://schema.org/BreadcrumbList">
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+<div class = "bread">
+  <ul itemscope itemtype = "http://schema.org/BreadcrumbList">
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/">
-        <span itemprop="name">Git</span>
+        <span itemprop = "name"> Git </ span>
       </a>
-      <meta itemprop="position" content="1" />
-    </li>
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+      <meta itemprop = "position" content = "1" />
+    </ li>
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/tutorial.html">
-        <span itemprop="name">入門</span>
+        <span itemprop = "name"> Introduction </ span>
       </a>
-      <meta itemprop="position" content="2" />
-    </li>
+      <meta itemprop = "position" content = "2" />
+    </ li>
     <li>
       here
-    </li>
-  </ul>
-</div>
+    </ li>
+  </ ul>
+</ div>
 
-<h2>Gitリポジトリの初期化</h2>
+<h2> Initialize Git repository </ h2>
 
-Gitリポジトリを作成しましょう。Gitでリポジトリ管理を行うときに最初に必要な作業がリポジトリの初期化です。
+Let's create a Git repository. The first task you need to do when managing a repository in Git is to initialize the repository.
 
-ソースコードがあるプロジェクトのディレクトリが「myapp」だったとしましょう。
+Let's say the directory of the project where the source code is located is "myapp".
 
 <pre>
-mypp/foo.pl
+mypp / foo.pl
     /bar.pl
     /baz.pl
-</pre>
+</ pre>
 
-このディレクトリをGitリポジトリとして管理するには、「<a href="/blog/20201109142343.html">git init</a>」コマンドを使って初期化します。
+To manage this directory as a Git repository, initialize it using the <a href="/blog/20201109142343.html"> git init </a> command.
 
-<a href="https://en.linux.perlzemi.com/blog/20191012191854.html">cdコマンド</a>で「mypp」ディレクトリに移動します。
+Change to the "mypp" directory with the <a href="https://en.linux.perlzemi.com/blog/20191012191854.html"> cd command </a>.
 
 <pre>
 cd mypp
-</pre>
+</ pre>
 
-次に「git init」コマンドを実行します。
+Then run the "git init" command.
 
 <pre>
-# Gitリポジトリの初期化
+#Initialize Git repository
 git init
-</pre>
+</ pre>
 
-成功すると次のようなメッセージが出力されます。
+If successful, the following message will be output.
 
 <pre>
 Initialized empty Git repository in /home/kimoto/labo/myapp/.git/
-</pre>
+</ pre>
 
-<a href="https://en.linux.perlzemi.com/blog/20191126082723.html">lsコマンド</a>で「-a」オプションを指定して、隠しディレクトリまで表示すると「.git」というディレクトリができています。
+If you specify the "-a" option with the <a href="https://en.linux.perlzemi.com/blog/20191126082723.html"> ls command </a> and display the hidden directory, it will be ".git". There is a directory called.
 
 <pre>
 $ ls -a
-.  ..  foo.txt  .git
-</pre>
+... foo.txt .git
+</ pre>
 
-「.git」ディレクトリの中には、このリポジトリに関するGitの設定や、Gitのコミット情報が保存されます。
+The ".git" directory stores Git settings for this repository and Git commit information.
 
-「.git」というディレクトリの中身は、特別な理由がない限りは、直接編集しないよう注意しましょう。
+Be careful not to edit the contents of the ".git" directory directly unless you have a specific reason to do so.
 
-これでGitリポジトリの初期化の作業が完了です。
+This completes the work of initializing the Git repository.
