--- a/templates/blog/20210723090147.html
+++ b/templates/blog/20210723090147.html
@@ -1,116 +1,116 @@
-<div class="bread">
-  <ul itemscope itemtype="http://schema.org/BreadcrumbList">
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+<div class = "bread">
+  <ul itemscope itemtype = "http://schema.org/BreadcrumbList">
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/">
-        <span itemprop="name">Git</span>
+        <span itemprop = "name"> Git </ span>
       </a>
-      <meta itemprop="position" content="1" />
-    </li>
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+      <meta itemprop = "position" content = "1" />
+    </ li>
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/tutorial.html">
-        <span itemprop="name">入門</span>
+        <span itemprop = "name"> Introduction </ span>
       </a>
-      <meta itemprop="position" content="2" />
-    </li>
+      <meta itemprop = "position" content = "2" />
+    </ li>
     <li>
       here
-    </li>
-  </ul>
-</div>
+    </ li>
+  </ ul>
+</ div>
 
-<h2>コミットの準備を行う</h2>
+<h2> Prepare for commit </ h2>
 
-Gitでは、コミットを行う前に、コミットの準備を行います。コミットの準備を行うには「<a href="/blog/20201112094521.html">git add</a>」コマンドを使用します。
-
-<pre>
-# ひとつのファイルをコミット準備状態にする
-git add ファイル名
-</pre>
-
-カレントディレクトリ以下にある、すべてのファイルを、コミット準備状態にするには「git add .」とします。Git 2.0からは、削除されたファイルも、コミット準備状態にしてくれます。
+Git prepares for a commit before it commits. Use the "<a href="/blog/20201112094521.html"> git add </a>" command to prepare for commit.
 
 <pre>
-# カレントディレクトリ以下にあるファイルをコミット準備状態にする
-git add .
-</pre>
+# Put one file ready for commit
+git add filename
+</ pre>
 
-<h3>コミット準備状態を確認する</h3>
-
-コミット準備状態を確認するには「<a href="/blog/20201110105057.html">git status</a>」コマンドを使用します。
+Use "git add." To put all the files under the current directory in the commit ready state. Starting with Git 2.0, deleted files will also be ready for commit.
 
 <pre>
-# コミット準備状態を確認する
+# Put files under the current directory ready for commit
+git add.
+</ pre>
+
+<h3> Check the commit preparation status </ h3>
+
+Use the "<a href="/blog/20201110105057.html"> git status </a>" command to check the commit readiness.
+
+<pre>
+# Check the commit preparation status
 git status
-</pre>
+</ pre>
 
-コミット準備ができている場合の出力のサンプルです。「templates/index.html」は修正、「README.md」削除で、コミット準備状態になっています。
+Here is a sample output when ready to commit. "Templates / index.html" has been modified and "README.md" has been deleted, and it is ready for commit.
 
 <pre>
 $ git status
 On branch master
-Your branch is up to date with 'origin/master'.
+Your branch is up to date with'origin / master'.
 
 Changes to be committed:
-  (use "git reset HEAD <file>..." to unstage)
+  (use "git reset HEAD <file> ..." to unstage)
 
-        deleted:    README.md
-        modified:   templates/index.html
-</pre>
+        deleted: README.md
+        modified: templates / index.html
+</ pre>
 
-<h3>コミットされるファイルの差分を確認する</h3>
+<h3> Check the difference between files to be committed </ h3>
 
-コミットする前には、実際にコミットされるファイルの差分を確認しましょう。実際にコミットされるファイルの差分を確認するには「<a href="/blog/20210805092910.html">git diff</a>」コマンドの「--cached」オプションを使用します。「--cached」オプションのない「git diff」は、ワーキングディレクトリと、コミット準備されたファイルの差分を表示するので、注意しましょう。
+Before committing, let's check the difference between the files that are actually committed. Use the "--cached" option of the "<a href="/blog/20210805092910.html"> git diff </a>" command to see the differences between the files that are actually committed. Note that "git diff" without the "--cached" option will show the difference between the working directory and the commit-prepared files.
 
 <pre>
-# コミットされるファイルの差分を確認する
+#Check the differences between the files to be committed
 git diff --cached
-</pre>
+</ pre>
 
-出力例です。
+This is an output example.
 
 <pre>
 $ git diff --cached
-diff --git a/README.md b/README.md
+diff --git a /README.md b / README.md
 deleted file mode 100644
 index 372dc9d3..00000000
---- a/README.md
-+++ /dev/null
+--- a / README.md
++++ / dev / null
 @@ -1,5 +0,0 @@
-diff --git a/README.md b/README.md
+diff --git a /README.md b / README.md
 deleted file mode 100644
 index 372dc9d3..00000000
---- a/README.md
-+++ /dev/null
+--- a / README.md
++++ / dev / null
 @@ -1,5 +0,0 @@
--<h1>
--  Perl入門ゼミ
--</h1>
--
--
-diff --git a/templates/index.html b/templates/index.html
+-<H1>
+--Introduction to Perl Seminar
+-</ h1>
+――――
+――――
+diff --git a / templates / index.html b / templates / index.html
 index 66c755ea..f0b95399 100644
---- a/templates/index.html
-+++ b/templates/index.html
+--- a / templates / index.html
++++ b / templates / index.html
 @@ -2,7 +2,7 @@
 
- <b>Perlテキスト処理</b>と<b>正規表現</b>の入門の入門講座です。Perlは<b>テキスト処理</b>と<b>正規表現</b>が得意なプログラミング言語で<b>Linuxサーバー管理</b>、<b>Webシステム開発</b>という分野で活躍。テキスト処理と正規表現の基礎としてPerlプ
-ログラミング言語を基本から解説。LinuxとWeb開発も学べます。Hello World!
+ An introductory course on <b> Perl text processing </ b> and <b> regular expressions </ b>. Perl is a programming language that excels at <b> text processing </ b> and <b> regular expressions </ b> in the fields of <b> Linux server management </ b> and <b> Web system development </ b>. Active in. Perl as the basis for text processing and regular expressions
+Explains the logging language from the basics. You can also learn Linux and web development. Hello World!
 
--Perlは、ほとんどのLinux/Unixにインストールされていて、後方互換性が高く安定して
-運用できることに定評があります。
-+Perlは、ほとんどのLinux/Unixにインストールされていて、後方互換性が高く安定して
-運用できることに定評があります。いいね。
+-Perl is installed on most Linux / Unix and is backwards compatible and stable
+It has a good reputation for being operational.
++ Perl is installed on most Linux / Unix and is backwards compatible and stable
+It has a good reputation for being operational. How nice.
 
- <h3>Perlプログラミング入門</h3>
-</pre>
+ <h3> Introduction to Perl Programming </ h3>
+</ pre>
  
-<h3>コミット準備をキャンセルする</h3>
+<h3> Cancel commit preparation </ h3>
 
-コミット準備をキャンセルするには「<a href="/blog/20210806133244.html">git reset</a>」コマンドをを使用します。
+Use the "<a href="/blog/20210806133244.html"> git reset </a>" command to cancel the commit preparation.
 
 <pre>
-# コミット準備をキャンセルする
+# Cancel commit preparation
 git reset
-</pre>
+</ pre>
 
-間違っても、決して、コミット準備をキャンセルするために「git reset」コマンドに「--hard」オプションをつけないでください。今まで書いた、ワーキングディレクトリの変更内容が、すべてキャンセルされ、涙が出てきます。テキストエディタ上に、変更内容が残っている場合は、急いで、上書きしましょう。
+If you make a mistake, never add the "--hard" option to the "git reset" command to cancel the commit preparation. All the changes in the working directory I've written so far will be canceled and tears will come out. If there are any changes left on the text editor, hurry up and overwrite them.
