--- a/templates/blog/20210729082405.html
+++ b/templates/blog/20210729082405.html
@@ -1,92 +1,92 @@
-<div class="bread">
-  <ul itemscope itemtype="http://schema.org/BreadcrumbList">
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+<div class = "bread">
+  <ul itemscope itemtype = "http://schema.org/BreadcrumbList">
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/">
-        <span itemprop="name">Git</span>
+        <span itemprop = "name"> Git </ span>
       </a>
-      <meta itemprop="position" content="1" />
-    </li>
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+      <meta itemprop = "position" content = "1" />
+    </ li>
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/tutorial.html">
-        <span itemprop="name">入門</span>
+        <span itemprop = "name"> Introduction </ span>
       </a>
-      <meta itemprop="position" content="2" />
-    </li>
+      <meta itemprop = "position" content = "2" />
+    </ li>
     <li>
       here
-    </li>
-  </ul>
-</div>
+    </ li>
+  </ ul>
+</ div>
 
-<h2>コミットを行う</h2>
+<h2> Make a commit </ h2>
 
-Gitでコミットを行う方法を解説します。<a href="/blog/20201113141302.html">git commit</a>コマンドで、コミットができます。<a href="/blog/20210723090147.html">コミットの準備</a>ができている必要があります。
+I will explain how to commit with Git. You can commit with the <a href="/blog/20201113141302.html"> git commit </a> command. You need to be <a href="/blog/20210723090147.html"> ready to commit </a>.
 
-コミットを行うには、ソースコードの変更の要点を記述したコメントを入力する必要があります。「-m」オプションで指定します。このコメントは、コミットメッセージと呼ばれます。
-
-<pre>
-# コメントを直接入力してコミット
-git commit -m "コメント"
-</pre>
-
-「-m」オプションを使用しない場合は、viなどのエディタで、開くことができます。このエディタは、Gitの設定ファイルで設定することもできます。
+To make a commit, you need to enter a comment that outlines the source code changes. Specify with the "-m" option. This comment is called a commit message.
 
 <pre>
-# コメントをviなどのエディタで開いて記述してからコミットメッセージを書くこともできます。
+#Enter a comment directly to commit
+git commit -m "comment"
+</ pre>
+
+If you do not use the "-m" option, you can open it in an editor such as vi. This editor can also be set in the Git config file.
+
+<pre>
+You can also open the #comment in an editor such as vi and write it before writing the commit message.
 git commit
-</pre>
+</ pre>
 
-<h3>コミットの確認</h3>
+<h3> Confirm commit </ h3>
 
-コミットを確認するには<a href="/blog/20201103093112.html">git logコマンド</a>を使います。
+Use the <a href="/blog/20201103093112.html"> git log command </a> to confirm the commit.
 
 <pre>
 git log
-</pre>
+</ pre>
 
-git logの出力のサンプルです。一番上が新しいコミットです。今コミットしたコミットメッセージが、一番上にきていることを確認しましょう。
+This is a sample output of git log. At the top is the new commit. Make sure the commit message you just committed is at the top.
 
 <pre>
-commit 99e77ecbb2fa0922aed2995ebc20eea20b559a87 (HEAD -> main, origin/main)
+commit 99e77ecbb2fa0922aed2995ebc20eea20b559a87 (HEAD-> main, origin / main)
 Author: Yuki Kimoto <kimoto.yuki@gmail.com>
-Date:   Thu Jul 29 08:58:33 2021 +0900
+Date: Thu Jul 29 08:58:33 2021 +0900
 
-    ウィンドウのテキストを取得を追加
+    Added Get Window Text
 
 commit 8166b40288648dab314147df751c2d27788b1d03
 Author: Yuki Kimoto <kimoto.yuki@gmail.com>
-Date:   Wed Jul 28 08:53:01 2021 +0900
+Date: Wed Jul 28 08:53:01 2021 +0900
 
-    子ウィンドウの一覧を取得とデスクトップウィンドウの取得を追
+    Get list of child windows and get desktop window
 
 commit 7768973127fa0495e1ac8ab745d2f10fc1c38f8a
 Author: Yuki Kimoto <kimoto.yuki@gmail.com>
-Date:   Tue Jul 27 08:16:09 2021 +0900
+Date: Tue Jul 27 08:16:09 2021 +0900
 
-    PerlでWebブラウザ自動操作ロボット作成方法のまとめ加筆
-</pre>
+    Summary of how to create a web browser automated operation robot in Perl
+</ pre>
 
-注意点として、これは、個人サイトのものなので、コミットメッセージがだいぶ適当ですが、共同開発の場合は、もう少し丁寧に書きましょう。
+Note that this is from a personal site, so the commit message is pretty good, but if you're co-developing, write it a little more carefully.
 
-<h3>間違ったコミットを戻すには?</h3>
+<h3> How to get back the wrong commit? </ h3>
 
-間違ってコミットしたことに、コミット直後に気が付きました。こんな場合は、間違ったコミットを戻すには、どうすればよいのでしょうか?
+Immediately after committing, I realized that I had committed by mistake. In this case, how can I get the wrong commit back?
 
-「<a href="/blog/20210806133244.html">git reset</a>」コマンドを使って、以前のコミットまで戻します。一つ前のコミットIDを確認しましょう。上記の例では以下の「8166b40288648dab314147df751c2d27788b1d03」です。
+Use the "<a href="/blog/20210806133244.html"> git reset </a>" command to revert to the previous commit. Check the previous commit ID. In the above example, it is the following "8166b40288648dab314147df751c2d27788b1d03".
 
 <pre>
 commit 8166b40288648dab314147df751c2d27788b1d03
 Author: Yuki Kimoto <kimoto.yuki@gmail.com>
-Date:   Wed Jul 28 08:53:01 2021 +0900
+Date: Wed Jul 28 08:53:01 2021 +0900
 
-    子ウィンドウの一覧を取得とデスクトップウィンドウの取得を追
-</pre>
+    Get list of child windows and get desktop window
+</ pre>
 
-このコミットIDを「git reset」の引数に指定します。
+Specify this commit ID in the argument of "git reset".
 
 <pre>
-# 一つ前のコミットに戻す
+# Revert to the previous commit
 git reset 8166b40288648dab314147df751c2d27788b1d03
-</pre>
+</ pre>
 
-間違っても「git reset」コマンドに「--hard」オプションを指定しないようにしましょう。ワーキングディレクトリでのファイルの変更がすべて戻り、涙が出てきます。テキストエディタでファイルを開いていて、内容が残っている場合は、素早く上書きしましょう。
+If you make a mistake, don't specify the "--hard" option in the "git reset" command. All the file changes in the working directory are returned and tears come out. If you have a file open in a text editor and the content remains, overwrite it quickly.
