--- a/templates/blog/20210805092910.html
+++ b/templates/blog/20210805092910.html
@@ -1,127 +1,127 @@
-<div class="bread">
-  <ul itemscope itemtype="http://schema.org/BreadcrumbList">
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+<div class = "bread">
+  <ul itemscope itemtype = "http://schema.org/BreadcrumbList">
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/">
-        <span itemprop="name">Git</span>
+        <span itemprop = "name"> Git </ span>
       </a>
-      <meta itemprop="position" content="1" />
-    </li>
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+      <meta itemprop = "position" content = "1" />
+    </ li>
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/commands.html">
-        <span itemprop="name">コマンド</span>
+        <span itemprop = "name"> command </ span>
       </a>
-      <meta itemprop="position" content="2" />
-    </li>
+      <meta itemprop = "position" content = "2" />
+    </ li>
     <li>
       here
-    </li>
-  </ul>
-</div>
+    </ li>
+  </ ul>
+</ div>
 
-<h2>git diff - 差分の表示</h2>
+<h2> git diff --Display difference </ h2>
 
-git diffコマンドは差分を表示するコマンドです。
+The git diff command is a command to display the difference.
 
 <pre>
-# 差分の表示
+#Display difference
 git diff
-</pre>
+</ pre>
 
-git diff コマンドの出力例です。
+Here is an example of the output of the git diff command.
 
 <pre>
 $ git diff
-diff --git a/README.md b/README.md
+diff --git a /README.md b / README.md
 deleted file mode 100644
 index 372dc9d3..00000000
---- a/README.md
-+++ /dev/null
+--- a / README.md
++++ / dev / null
 @@ -1,5 +0,0 @@
-diff --git a/README.md b/README.md
+diff --git a /README.md b / README.md
 deleted file mode 100644
 index 372dc9d3..00000000
---- a/README.md
-+++ /dev/null
+--- a / README.md
++++ / dev / null
 @@ -1,5 +0,0 @@
--<h1>
--  Perl入門ゼミ
--</h1>
--
--
-diff --git a/templates/index.html b/templates/index.html
+-<H1>
+--Introduction to Perl Seminar
+-</ h1>
+――――
+――――
+diff --git a / templates / index.html b / templates / index.html
 index 66c755ea..f0b95399 100644
---- a/templates/index.html
-+++ b/templates/index.html
+--- a / templates / index.html
++++ b / templates / index.html
 @@ -2,7 +2,7 @@
 
- <b>Perlテキスト処理</b>と<b>正規表現</b>の入門の入門講座です。Perlは<b>テキスト処理</b>と<b>正規表現</b>が得意なプログラミング言語で<b>Linuxサーバー管理</b>、<b>Webシステム開発</b>という分野で活躍。テキスト処理と正規表現の基礎としてPerlプ
-ログラミング言語を基本から解説。LinuxとWeb開発も学べます。Hello World!
+ An introductory course on <b> Perl text processing </ b> and <b> regular expressions </ b>. Perl is a programming language that excels at <b> text processing </ b> and <b> regular expressions </ b> in the fields of <b> Linux server management </ b> and <b> Web system development </ b>. Active in. Perl as the basis for text processing and regular expressions
+Explains the logging language from the basics. You can also learn Linux and web development. Hello World!
 
--Perlは、ほとんどのLinux/Unixにインストールされていて、後方互換性が高く安定して
-運用できることに定評があります。
-+Perlは、ほとんどのLinux/Unixにインストールされていて、後方互換性が高く安定して
-運用できることに定評があります。いいね。
+-Perl is installed on most Linux / Unix and is backwards compatible and stable
+It has a good reputation for being operational.
++ Perl is installed on most Linux / Unix and is backwards compatible and stable
+It has a good reputation for being operational. How nice.
 
- <h4>Perlプログラミング入門</h4>
-</pre>
+ <h4> Introduction to Perl Programming </ h4>
+</ pre>
 
-git diffコマンドは、引数がない場合は、ワーキングディレクトリと<a href="/blog/20210723090147.html">コミット準備状態</a>との差分を表示します。コミット準備状態は、コミット準備を行っていない場合は、直近のコミットです。
+The git diff command, with no arguments, displays the difference between the working directory and <a href="/blog/20210723090147.html"> commit ready state </a>. The commit-ready state is the most recent commit if you have not prepared for commit.
 
-つまり、コミット準備を行った後は「git diff」コマンドは、なんの差分も表示しないということに注意しましょう。
+In other words, note that the "git diff" command doesn't show any diffs after you've prepared for a commit.
 
-<h4>直近のコミットとコミット準備状態の差分を表示する</h4>
+<h4> Show the difference between the most recent commit and the commit ready state </ h4>
 
-直近のコミットとコミット準備状態の差分を表示するには「--cached」オプションを使い「git diff --cached」とします。
+To see the difference between the most recent commit and the commit ready state, use the "--cached" option and type "git diff --cached".
 
 <pre>
-# 直近のコミットとコミット準備状態の差分を表示
+# Show the difference between the most recent commit and the commit ready state
 git diff --cached
-</pre>
+</ pre>
 
-「git add .」でコミット準備状態にした後に、実際にどんな差分が新しいコミットに追加されるのかを知るには「--cached」オプションを使用する必要があることに注意しましょう。
+Note that you need to use the "--cached" option to see what diffs are actually added to the new commit after you prepare it for commit with "git add.".
 
-<h4>特定のコミット間の差分を表示する</h4>
+<h4> Show diffs between specific commits </ h4>
 
-特定のコミット間の差分を表示するには、二つのコミットIDを引数に指定します。
+To see the difference between a particular commit, specify two commit IDs as arguments.
 
 <pre>
-git diff コミットID1 コミットID2
-</pre>
+git diff commit ID1 commit ID2
+</ pre>
 
-コミットIDを調べるには<a href="/blog/20201103093112.html">git logコマンド</a>を使用します。
+Use the <a href="/blog/20201103093112.html"> git log command </a> to find out the commit ID.
 
-コミットIDを指定したサンプルです。
+This is a sample that specifies the commit ID.
 
 <pre>
 git diff 30ce650c40cd05632fc8a992a7bff9d79dbaaa08 016d2063f2ed90d14ba9cea1a7ef1c2f962a003b
-</pre>
+</ pre>
 
-<h4>現在のコミットと一つ前のコミットとの差分を表示する</h4>
+<h4> Show the difference between the current commit and the previous commit </ h4>
 
-現在のコミットと一つ前のコミットとの差分を表示してみましょう。HEADというブランチが現在のブランチの先頭を示し、「^」という記号が、一つ前を表示することを利用すると次のように書けます。
-
-<pre>
-git diff HEAD^ HEAD
-</pre>
-
-さらに、省略して、以下のように書けます。
+Let's display the difference between the current commit and the previous commit. The branch called HEAD indicates the beginning of the current branch, and the symbol "^" can be written as follows by using the display of the previous branch.
 
 <pre>
-git diff HEAD^
-</pre>
+git diff HEAD ^ HEAD
+</ pre>
 
-<h4>特定のコミットとその直前のコミットの差分を表示する</h4>
-
-特定のコミットとその直前のコミットの差分を表示するには以下のようにします。
+Furthermore, you can omit it and write as follows.
 
 <pre>
-git diff 30ce650c40cd05632fc8a992a7bff9d79dbaaa08^ 30ce650c40cd05632fc8a992a7bff9d79dbaaa08
-</pre>
+git diff HEAD ^
+</ pre>
 
-<h4>ブランチの差分を表示する</h4>
+<h4> Show the difference between a specific commit and the previous commit </ h4>
 
-ブランチの差分を表示するには以下のようにしましょう。ブランチがコミットに別名をつけたものだということを、知っていれば理解できますね。
+To see the difference between a particular commit and the previous commit:
+
+<pre>
+git diff 30ce650c40cd05632fc8a992a7bff9d79dbaaa08 ^ 30ce650c40cd05632fc8a992a7bff9d79dbaaa08
+</ pre>
+
+<h4> Show branch diffs </ h4>
+
+To see the branch diffs, do the following: If you know that a branch is an alias for commit, you know.
 
 <pre>
 git diff main some_branch
-</pre>
+</ pre>
