--- a/templates/blog/20210806133244.html
+++ b/templates/blog/20210806133244.html
@@ -1,97 +1,97 @@
-<div class="bread">
-  <ul itemscope itemtype="http://schema.org/BreadcrumbList">
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+<div class = "bread">
+  <ul itemscope itemtype = "http://schema.org/BreadcrumbList">
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/">
-        <span itemprop="name">Git</span>
+        <span itemprop = "name"> Git </ span>
       </a>
-      <meta itemprop="position" content="1" />
-    </li>
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+      <meta itemprop = "position" content = "1" />
+    </ li>
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/commands.html">
-        <span itemprop="name">コマンド</span>
+        <span itemprop = "name"> command </ span>
       </a>
-      <meta itemprop="position" content="2" />
-    </li>
+      <meta itemprop = "position" content = "2" />
+    </ li>
     <li>
       here
-    </li>
-  </ul>
-</div>
+    </ li>
+  </ ul>
+</ div>
 
-<h2>git resetコマンド - コミットの位置を移動する</h2>
+<h2> git reset command-move commit position </ h2>
 
-git resetコマンドは、現在のブランチのコミットの位置を移動するコマンドです。
-
-<pre>
-git reset コミットID
-</pre>
-
-git resetコマンドは、使い方によっては、現在のワーキングディレクトリの変更内容をなかったことにしてしまうので、この点について、先に書いておきます。
-
-<h3>--hardオプションは、ワーキングディレクトリの変更すべて元に戻す</h3>
-
-git resetコマンドの「--hard」オプションは、ワーキングディレクトリに行われている変更をすべて元に戻します。
+The git reset command is a command that moves the commit position of the current branch.
 
 <pre>
-# ワーキングディレクトリに行われている変更をすべて元に戻し
-# コミット位置を変更
-git reset --hard コミットID
-</pre>
+git reset commit ID
+</ pre>
 
-ですので、git resetコマンドを使う場合は、コミットの位置だけを移動したいのか、ワーキングディレクトリに加えた変更を戻したいのかということを、まずよく考えてください。
+Depending on how you use it, the git reset command will assume that you haven't changed the current working directory, so I'll write about this first.
 
-<h3>ワーキングディレクトリに加えた変更をすべて元に戻したい</h3>
+<h3> --hard option undo all working directory changes </ h3>
 
-ソースコードを変更していて、ワーキングディレクトリに加えた変更を元に戻したという場合は「--hard」オプションを指定します。コミットIDが省略された場合は、最新のコミット位置に戻ります。
+The "--hard" option of the git reset command undoes any changes made to the working directory.
 
 <pre>
-# ワーキングディレクトリに加えた変更をすべて元に戻したい
+# Revert all changes made to the working directory
+# Change commit position
+git reset --hard commit ID
+</ pre>
+
+So, when using the git reset command, first think carefully about whether you want to move only the commit position or revert the changes you made to your working directory.
+
+<h3> I want to undo all the changes I made to the working directory </ h3>
+
+If you have changed the source code and undoed the changes you made to the working directory, specify the "--hard" option. If the commit ID is omitted, it reverts to the latest commit position.
+
+<pre>
+#I want to undo all the changes I made to the working directory
 git reset --hard
-</pre>
+</ pre>
 
-<h3>ワーキングディレクトリに加えた変更を維持して前のコミットに戻したい</h3>
+<h3> I want to keep the changes I made to the working directory and revert to the previous commit </ h3>
 
-間違ってコミットしてしまった場合、ワーキングディレクトリに加えた変更を維持して、前のコミットに戻したいという場合があります。そのような場合は「--hard」オプションを指定せずに、一つ前のコミットIDを指定します。
-
-<pre>
-# ワーキングディレクトリに加えた変更を維持して前のコミットに戻したい
-git reset ひとつ前のコミットID
-</pre>
-
-<h3>過去のある状態を復元したい</h3>
-
-過去に削除した実装をもう一度参考にしたいなど、過去のある状態に戻したいという場合があります。このような場合は、<a href="/blog/20201220091244.html">git branch</a>コマンドで、過去用のブランチを作成してから、「git reset --hard」で過去の状態に戻すのが安全です。
+If you accidentally commit, you may want to keep the changes you made to your working directory and revert to your previous commit. In such a case, specify the previous commit ID without specifying the "--hard" option.
 
 <pre>
-# oldブランチを作成
+#I want to keep the changes I made to the working directory and revert to the previous commit
+git reset Previous commit ID
+</ pre>
+
+<h3> I want to restore a certain state in the past </ h3>
+
+There are times when you want to return to a certain state in the past, such as wanting to refer to an implementation that was deleted in the past again. In such a case, use the <a href="/blog/20201220091244.html"> git branch </a> command to create a branch for the past, and then use "git reset --hard" to change to the past state. It's safe to put it back.
+
+<pre>
+#create an old branch
 git branch old
 
-# oldブランチに切り替え
+Switch to the #old branch
 git checkout old
 
-# 現在のブランチがoldであることを確認
+# Make sure the current branch is old
 git branch
 
-# 以下のように出力されることを確認
+# Confirm that the output is as follows
   main
 * old
 
-# 過去の状態に戻る
-git reset --hard 過去のある時点のコミットID
-</pre>
+#Return to past state
+git reset --hard Commit ID at some point in the past
+</ pre>
 
-戻りたい地点を探すには、コミットメッセージを検索できる、<a href="/blog/20201103093112.html">git log</a>コマンドの「--grep」オプションが便利です。
-
-<pre>
-git log --grep 'fix foo'
-</pre>
-
-コミットIDが見つかった、その状態に戻したければ、そのコミットIDを使いましょう。また、その一つ前に戻りたいという場合もあると思います。その場合は、一つ前のコミットを表現する「^」を使えます。
+The "--grep" option of the <a href="/blog/20201103093112.html"> git log </a> command, which allows you to search for commit messages, is useful for finding where you want to go back.
 
 <pre>
-# 見つかったコミットIDに戻す
-git reset --hard コミットID
+git log --grep'fix foo'
+</ pre>
 
-# 見つかったコミットIDの直前に戻す
-git reset --hard コミットID^
-</pre>
+If you found the commit ID and want to return to that state, use that commit ID. Also, you may want to go back one step before that. In that case, you can use "^" to express the previous commit.
+
+<pre>
+#Revert to found commit ID
+git reset --hard commit ID
+
+#Revert to just before the found commit ID
+git reset --hard commit ID ^
+</ pre>
