--- a/templates/blog/20210817083810.html
+++ b/templates/blog/20210817083810.html
@@ -1,49 +1,49 @@
-<div class="bread">
-  <ul itemscope itemtype="http://schema.org/BreadcrumbList">
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+<div class = "bread">
+  <ul itemscope itemtype = "http://schema.org/BreadcrumbList">
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/">
-        <span itemprop="name">Git</span>
+        <span itemprop = "name"> Git </ span>
       </a>
-      <meta itemprop="position" content="1" />
-    </li>
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+      <meta itemprop = "position" content = "1" />
+    </ li>
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/commands.html">
-        <span itemprop="name">コマンド</span>
+        <span itemprop = "name"> command </ span>
       </a>
-      <meta itemprop="position" content="2" />
-    </li>
+      <meta itemprop = "position" content = "2" />
+    </ li>
     <li>
       here
-    </li>
-  </ul>
-</div>
+    </ li>
+  </ ul>
+</ div>
 
-<h2>git revert - 元に戻す変更内容でコミット</h2>
+<h2> git revert --commit with undo changes </ h2>
 
-「git revert」コマンドを使うと、指定したコミットを、元に戻す変更内容でコミットできます。
-
-<pre>
-git revert コミットID
-</pre>
-
-<h3>git revertはいつ使うの?</h3>
-
-Gitはコミットの履歴を持っており、その履歴を維持したまま、過去の変更を元に戻したいという場合が、あります。
-
-そのような場合に「git revert」コマンドを使って、過去の変更を元に戻す変更内容でコミットできます。
-
-<h3>git revertをさらに戻すことはできるの</h3>
-
-はい「git revert」したコミットIDを指定すると、リバートのリバートを行うことができます。
-
-<h3>複数の連続した変更内容があった場合はどうするの?</h3>
-
-コミットIDを調べて、新しい方から古い方に向かって複数回「git revert」を実行します。手間がかかりますが、やる必要があるときは、やる必要があります。
+You can use the "git revert" command to commit the specified commit with the undo changes.
 
 <pre>
-git revert コミット3
-git revert コミット2
-git revert コミット1
-</pre>
+git revert commit id
+</ pre>
 
-間違いが発生しやすい手順なのでmasterブランチではやらずに、まずは「<a href="/blog/20201220091244.html">git branch</a>」コマンドでブランチを作成してやるのが安心でしょう。
+<h3> When do you use git revert? </ h3>
+
+Git has a history of commits, and you may want to keep that history and undo past changes.
+
+In such cases, you can use the "git revert" command to commit with changes that undo past changes.
+
+<h3> You can get more git revert back </ h3>
+
+Yes You can revert the revert by specifying the "git revert" commit ID.
+
+<h3> What to do if there are multiple consecutive changes? </ H3>
+
+Find out the commit ID and run "git revert" multiple times, from newest to oldest. It's a hassle, but when you need to do it, you have to do it.
+
+<pre>
+git revert commit 3
+git revert commit 2
+git revert commit 1
+</ pre>
+
+It's a mistake-prone procedure, so it's safe to create a branch with the "<a href="/blog/20201220091244.html"> git branch </a>" command instead of doing it in the master branch.
