--- a/templates/commands.html
+++ b/templates/commands.html
@@ -1,37 +1,37 @@
-<div class="bread">
-  <ul itemscope itemtype="http://schema.org/BreadcrumbList">
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+<div class = "bread">
+  <ul itemscope itemtype = "http://schema.org/BreadcrumbList">
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/">
-        <span itemprop="name">Git</span>
+        <span itemprop = "name"> Git </ span>
       </a>
-      <meta itemprop="position" content="1" />
-    </li>
+      <meta itemprop = "position" content = "1" />
+    </ li>
     <li>
       here
-    </li>
-  </ul>
-</div>
+    </ li>
+  </ ul>
+</ div>
 
-<h2>Gitコマンド</h2>
+<h2> Git command </ h2>
 
-Gitコマンドの紹介です。
+Introducing the Git command.
 
 <ul>
-  <li><a href="/blog/20201109142343.html">git init - Gitリポジトリの初期化</a></li>
-  <li><a href="/blog/20201103093112.html">git log - コミットログの内容を見る</a></li>
-  <li><a href="/blog/20201110105057.html">git status - コミット準備されているかを確認する</a></li>
-  <li><a href="/blog/20201112094521.html">git add - ファイルをコミット準備状態にする</a></li>
-  <li><a href="/blog/20201113141302.html">git commit - コミットする</a></li>
-  <li><a href="/blog/20201220091244.html">git branch - ブランチの一覧表示・ブランチの作成</a></li>
-  <li><a href="/blog/20201222100951.html">git checkout - ブランチの変更</a></li>
-  <li><a href="/blog/20210805092910.html">git diff - 差分の表示</a></li>
-  <li><a href="/blog/20210806133244.html">git reset - コミットの位置を移動</a></li>
-  <li><a href="/blog/20210809142256.html">git fetch - リモートリポジトリの情報取得</a></li>
-  <li><a href="/blog/20210810081052.html">git remote - リモートリポジトリの追加・変更・削除</a></li>
-  <li><a href="/blog/20210812084715.html">git push - ローカルリポジトリの内容をリモートリポジトリに転送</a></li>
-  <li><a href="/blog/20210813082314.html">git pull - リモートリポジトリの内容をローカルリポジトリに転送してマージ</a></li>
-  <li><a href="/blog/20210816083805.html">git tag - タグをつける</a></li>
-  <li><a href="/blog/20210817083810.html">git revert - 元に戻す変更内容でコミット</a></li>
-  <li><a href="/blog/20210819082837.html">git merge - マージする</a></li>
-  <li><a href="/blog/20210824154428.html">git rebase - 複数のコミットを改変してまとめる</a></li>
-</ul>
+  <li> <a href="/blog/20201109142343.html"> git init --Initialize Git repository </a> </ li>
+  <li> <a href="/blog/20201103093112.html"> git log --View the contents of the commit log </a> </ li>
+  <li> <a href="/blog/20201110105057.html"> git status --Check if commit is ready </a> </ li>
+  <li> <a href="/blog/20201112094521.html"> git add --put the file ready for commit </a> </ li>
+  <li> <a href="/blog/20201113141302.html"> git commit --commit </a> </ li>
+  <li> <a href="/blog/20201220091244.html"> git branch --List branch / Create branch </a> </ li>
+  <li> <a href="/blog/20201222100951.html"> git checkout --branch change </a> </ li>
+  <li> <a href="/blog/20210805092910.html"> git diff --Display difference </a> </ li>
+  <li> <a href="/blog/20210806133244.html"> git reset --move commit position </a> </ li>
+  <li> <a href="/blog/20210809142256.html"> git fetch --Get remote repository information </a> </ li>
+  <li> <a href="/blog/20210810081052.html"> git remote --Add / Change / Delete Remote Repository </a> </ li>
+  <li> <a href="/blog/20210812084715.html"> git push --Transfer the contents of the local repository to the remote repository </a> </ li>
+  <li> <a href="/blog/20210813082314.html"> git pull --Transfer and merge the contents of the remote repository to the local repository </a> </ li>
+  <li> <a href="/blog/20210816083805.html"> git tag --tagging </a> </ li>
+  <li> <a href="/blog/20210817083810.html"> git revert --Commit with undo changes </a> </ li>
+  <li> <a href="/blog/20210819082837.html"> git merge --merge </a> </ li>
+  <li> <a href="/blog/20210824154428.html"> git rebase --Modify and combine multiple commits </a> </ li>
+</ ul>
