--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -1,28 +1,28 @@
-<div class="bread">
-  <ul itemscope itemtype="http://schema.org/BreadcrumbList">
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+<div class = "bread">
+  <ul itemscope itemtype = "http://schema.org/BreadcrumbList">
+    <li itemprop = "itemListElement" itemscope itemtype = "http://schema.org/ListItem">
       <a itemprop="item" href="/">
-        <span itemprop="name">Git</span>
+        <span itemprop = "name"> Git </ span>
       </a>
-      <meta itemprop="position" content="1" />
-    </li>
+      <meta itemprop = "position" content = "1" />
+    </ li>
     <li>
       here
-    </li>
-  </ul>
-</div>
+    </ li>
+  </ ul>
+</ div>
 
-<h2>Git入門</h2>
+<h2> Introduction to Git </ h2>
 
-Git入門です。Gitでソースコードを管理する技術を学びましょう。
+This is an introduction to Git. Learn the techniques for managing source code with Git.
 
 <ul>
-  <li><a href="/blog/20210719151607.html">Gitとは</a></li>
-  <li><a href="/blog/20210720092930.html">Gitリポジトリの初期化</a></li>
-  <li><a href="/blog/20210721142530.html">メールアドレスと名前の登録</a></li>
-  <li><a href="/blog/20210723090147.html">コミットの準備を行う</a></li>
-  <li><a href="/blog/20210729082405.html">コミットを行う</a></li>
-  <li><a href="/blog/20210803133300.html">リモートリポジトリにブランチをプッシュする</a></li>
-  <li><a href="/blog/20200610092020.html">Gitで管理しないファイルを設定する - .gitignore</a></li>
-  <li><a href="/blog/20201221091244.html">Gitで削除したファイルを復元する簡単な方法</a></li>
-</ul>
+  <li> <a href="/blog/20210719151607.html"> What is Git </a> </ li>
+  <li> <a href="/blog/20210720092930.html"> Initialize Git repository </a> </ li>
+  <li> <a href="/blog/20210721142530.html"> Email address and name registration </a> </ li>
+  <li> <a href="/blog/20210723090147.html"> Prepare for commit </a> </ li>
+  <li> <a href="/blog/20210729082405.html"> Commit </a> </ li>
+  <li> <a href="/blog/20210803133300.html"> Push a branch to a remote repository </a> </ li>
+  <li> <a href="/blog/20200610092020.html"> Set files that are not managed by Git --.gitignore </a> </ li>
+  <li> <a href="/blog/20201221091244.html"> Easy way to restore deleted files with Git </a> </ li>
+</ ul>
